--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,7 @@
             4. <a href="#4">BMI Calculator</a><br>
             5. <a href="#5">Soal Pertanyaan</a><br>
             6. <a href="#6">Penghitung Waktu</a><br>
+			7. <a href="#7">Labirin</a><br>
             </p>
         </div>
         <br>
@@ -87,8 +88,12 @@
             <p>Penghitung Waktu</p>
             <a href="projects/Penghitung Waktu.html">Penghitung Waktu</a>
         </div>
-        <p class="heading" id="7" style="font-size: 25px"><b>7. Bangun 3 Dimensi</b></p>
-        <p class="heading" id="8" style="font-size: 25px"><b>8. Labirin / Maze</b></p>
+        <p class="heading" id="7" style="font-size: 25px"><b>7. Labirin / Maze</b></p>
+		<div class="container2">
+            <p>Permainan Labirin dalam Puzzle<br>Tanggal dibuat: 6 Feb 2024</p>
+            <a href="projects/Labirin.html">Labirin</a>
+        </div>
+        <p class="heading" id="8" style="font-size: 25px"><b>8. Bangun 3 Dimensi</b></p>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
@@ -114,7 +119,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 26 Jan 2024<br>
+        Terakhir diupdate: 6 Feb 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
