--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -33,7 +33,7 @@
             4. <a href="#4">Hasil Karya Kelas 7</a><br>
             5. <a href="#5">Hasil Karya Kelas 8</a><br>
             6. <a href="#6">Hasil Karya Kelas 9</a><br>
-			7. <a href="#7">Hasil Karya Kelas 10</a><br>
+            7. <a href="#7">Hasil Karya Kelas 10</a><br>
             </p>
         </div>
         <br>
@@ -42,11 +42,35 @@
         <div class="container2">
 			<img src="images/canva-icon.png" width="100">
             <div class="clearfix"></div>
-            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
+            <p>Inilah beberapa project canva yang sudah dibuat di Canva<br>Berikut ini ada beberapa presentasi yang sudah pernah buat:</p>
             <ul>
-                <li><a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/edit">Entrepreneur Term 2</a> - Tugas Sekolah</li>
-                <li><a href="https://www.canva.com/design/DAFwFtdQ0Ko/CZakrbjnuprD6d988TQL8Q/edit">Entrepreneur Term 1</a> - Tugas Sekolah</li>
-                <li>Coming Soon</li>
+                <div class="column" style="padding-right: 100px;">
+                    <li>
+                        <!-- <a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/edit">Entrepreneur Term 2</a><br> -->
+                        <a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/view">Entrepreneur Term 2</a><br>
+                        Tugas Sekolah Kelas 10<br>
+                        Dibuat: November 2023
+                    </li><br>
+                    <li>
+                        <a href="https://www.canva.com/design/DAFwXlWF5Ko/qLFstaN2wWiQQCl179B3KQ/view">Laporan Hidroponik Tanaman Kangkung</a><br>
+                        Dibuat: Oktober 2023
+                    </li><br>
+                    <li>
+                        <a href="https://www.canva.com/design/DAFwFtdQ0Ko/CZakrbjnuprD6d988TQL8Q/view">Entrepreneur Term 1</a><br>
+                        Dibuat: September 2023
+                    </li><br>
+                </div>
+                <div class="column">
+                    <li>
+                        <a href="https://www.canva.com/design/DAFTTOc-ulA/u2hnjpYUx-o8QH9b0yHNlw/view">Observasi Bandeng Juwana Elrina</a><br>
+                        Dibuat: November 2022
+                    </li><br>
+                    <li>
+                        <a href="https://www.canva.com/design/DAFIDBYDpJw/u54kaC39SdO2cQgt5LWrnQ/view">Produk Chokies</a><br>
+                        Dibuat: Agustus 2022
+                    </li><br>
+                </div>
+                <div class="clearfix"></div>
             </ul>
         </div><br>
 		
@@ -54,7 +78,7 @@
         <div class="container2">
             <img src="images/google-form-icon.png" width="100">
 			<div class="clearfix"></div>
-            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
+            <p>Google Form adalah website untuk mengisi form yang terdiri dari kuis, pilihan ganda, dan paragraf.<br>Berikut ini ada beberapa google form yang sudah pernah buat:</p>
             <ul>
                 <li><a href="https://docs.google.com/forms/d/1TYLPl871KmzQhd0X6kO_xlqiosELJifWl6R7xTDWvaE/">Kuis dan Pertanyaan Astronomi</a> - Belum sepenuhnya selesai</li>
                 <li>Refleksi Liburan</li>
@@ -63,6 +87,8 @@
 		
 		<p class="heading" id="3" style="font-size: 25px"><b>3. Kumpulan Website</b></p>
 		<div class="container2">
+            <img src="images/website-image.jpg" width="150">
+            <div class="clearfix"></div>
 			<p>Inilah beberapa website yang sudah pernah dibuat sebelumnya:</p>
             <ul>
                 <li><a href="Kumpulan Website/Tugas Eagle School/Latihan1.html">Latihan 1</a> - Website Pertama - Dibuat: Januari 2021</li>
@@ -108,8 +134,53 @@
         <br>
 		
 		<p class="heading" id="5" style="font-size: 25px"><b>5. Hasil Karya Kelas 8</b></p>
+        <table class="container2">
+            <tr>
+                <th style="width:200px;">Nama Karya</th>
+                <th>Gambar</th>
+                <th style="width:600px;">Deskripsi</th>
+            </tr>
+            <tr>
+                <td>Miniatur Sepak Bola</td>
+                <td style="text-align:center; width:250px;">Belum ada gambar</td>
+                <td>Tugas Challenge dari kelas 8 Betania.<br><br>Dibuat: September 2021</td>
+            </tr>
+        </table>
+        <br>
+
 		<p class="heading" id="6" style="font-size: 25px"><b>6. Hasil Karya Kelas 9</b></p>
+        <table class="container2">
+            <tr>
+                <th style="width:200px;">Nama Karya</th>
+                <th>Gambar</th>
+                <th style="width:600px;">Deskripsi</th>
+            </tr>
+            <tr>
+                <td>Tugas Puisi</td>
+                <td style="text-align:center; width:250px;">Belum ada gambar</td>
+                <td>Tugas Challenge dari kelas 9 El Roi.<br><br>Dibuat: Agustus 2022</td>
+            </tr>
+            <tr>
+                <td>Portofolio</td>
+                <td style="text-align:center; width:250px;">Belum ada gambar</td>
+                <td>Dibuat: Maret 2023</td>
+            </tr>
+        </table>
+
 		<p class="heading" id="7" style="font-size: 25px"><b>7. Hasil Karya Kelas 10</b></p>
+        <table class="container2">
+            <tr>
+                <th style="width:200px;">Nama Karya</th>
+                <th>Gambar</th>
+                <th style="width:600px;">Deskripsi</th>
+            </tr>
+            <tr>
+                <td>Infografis Produk Indonesia yang Mendunia</td>
+                <td style="text-align:center;"><img src="Gambar Karya/Tugas Challenge Infografis Produk Indonesia yang Mendunia.jpg" width="250"></td>
+                <td>Produk Indonesia yang Mendunia terdiri dari 6 produk, yang terdiri dari Sandang, Pangan, dan Papan. Tugas Infografis ini termasuk Tugas Challenge Term 3.<br><br>Dibuat: Februari 2024</td>
+            </tr>
+        </table>
+        <br>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
@@ -135,7 +206,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 26 Jan 2024<br>
+        Terakhir diupdate: 16 Feb 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
