--- a/projects/Kumpulan Animasi.html
+++ b/projects/Kumpulan Animasi.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     body {
-        background-color: #f0d0a0;
+        background-color: #f0e0a0;
         /* font-family:"Helvetica",sans-serif; */
         font-family:"Source Sans Pro",sans-serif;
     }
@@ -107,15 +107,15 @@
 
     <p style="font-size:20px;"><b>Beberapa Link:</b></p>
 	<ul>
-		<li><a href="pw1.html">Jam saat ini</a></li>
-		<li><a href="pw2.html">Progress Bar waktu</a></li>
-        <li><a href="pw3.html">Stopwatch</a></li>
+		<li><a href="ka1.html">Kumpulan Animasi - Bola</a></li>
+		<li><a href="ka2.html">Kumpulan Animasi 2</a></li>
+        <li><a href="ka3.html">Kumpulan Animasi 3</a></li>
 	</ul>
 
     <br><br>
     <a class="button2" href="../projects.html">Kembali ke menu projects</a>
 
     <br><br>
-    <p>Terakhir diupdate: 20 Feb 2024</p>
+    <p>Terakhir diupdate: 21 Feb 2024</p>
 </body>
 </html>
