--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,7 @@
             5. <a href="#5">Soal Pertanyaan</a><br>
             6. <a href="#6">Penghitung Waktu</a><br>
 			7. <a href="#7">Labirin</a><br>
+            8. <a href="#8">Permainan Fisika</a><br>
             </p>
         </div>
         <br>
@@ -93,7 +94,11 @@
             <p>Permainan Labirin dalam Puzzle<br>Tanggal dibuat: 6 Feb 2024</p>
             <a href="projects/Labirin.html">Labirin</a>
         </div>
-        <p class="heading" id="8" style="font-size: 25px"><b>8. Bangun 3 Dimensi</b></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>8. Kumpulan Animasi</b></p>
+        <div class="container2">
+            <p>Kumpulan Animasi<br>Tanggal dibuat: 21 Feb 2024</p>
+            <a href="projects/Kumpulan Animasi.html">Kumpulan Animasi</a>
+        </div>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
@@ -119,7 +124,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 6 Feb 2024<br>
+        Terakhir diupdate: 21 Feb 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
