--- a/projects.html
+++ b/projects.html
@@ -7,15 +7,26 @@
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
 </head>
 <body>
     <div class="top-container heading">
-        <div class="dropdown" style="margin-right:20px; float:left;">
-            <!-- <button class="dropbtn">MENU</button> -->
+        <!-- <div class="dropdown" style="margin-right:20px; float:left;">
+            <button class="dropbtn">MENU</button>
             <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
             <div class="dropdown-content" id="boxlink"></div>
             <script src="script.js"></script>
+        </div> -->
+        <div class="sidebar" id="mySidebar">
+            <div class="closebtn" onclick="closeNav()"><img src="images/close-icon.png" width="20"></div>
+            <span style="font-size:22px;"><b>Main Menu</b></span>
+            <hr style="height:2px; border-width:0; background-color:gray">
+            <div class="dropdown-content" id="boxlink"></div>
+            <script src="script.js"></script>
+        </div>
+        <div class="backsidebar" id="mybacksidebar" onclick="closeNav()"></div>
+        <div class="column" style="padding-right:30px;">
+        <div class="openbtn" onclick="openNav()"><img src="images/menu-icon.jpg" width="30"></div>
         </div>
         <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
         <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
@@ -37,8 +48,8 @@
             4. <a href="#4">BMI Calculator</a><br>
             5. <a href="#5">Soal Pertanyaan</a><br>
             6. <a href="#6">Penghitung Waktu</a><br>
-			7. <a href="#7">Labirin</a><br>
-            8. <a href="#8">Permainan Fisika</a><br>
+            7. <a href="#7">Labirin</a><br>
+            8. <a href="#8">Kumpulan Animasi</a><br>
             </p>
         </div>
         <br>
@@ -90,7 +101,7 @@
             <a href="projects/Penghitung Waktu.html">Penghitung Waktu</a>
         </div>
         <p class="heading" id="7" style="font-size: 25px"><b>7. Labirin / Maze</b></p>
-		<div class="container2">
+	    <div class="container2">
             <p>Permainan Labirin dalam Puzzle<br>Tanggal dibuat: 6 Feb 2024</p>
             <a href="projects/Labirin.html">Labirin</a>
         </div>
@@ -124,7 +135,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 21 Feb 2024<br>
+        Terakhir diupdate: 4 Mar 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
